<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
      android:id="@+id/titleTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_text"
      android:textSize="20sp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="32dp" />

    <EditText
      android:id="@+id/phoneNumberEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_phone_number"
      android:inputType="phone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleTextView"
      android:layout_marginTop="16dp" />

    <EditText
      android:id="@+id/passwordEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/hint_password"
      android:inputType="textPassword"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText"
      android:layout_marginTop="16dp" />

    <Button
      android:id="@+id/enterButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/button_enter"
      android:textColor="@color/white"
      android:background="@color/colorPrimary"
      app:layout_constraintStart_toStartOf="@id/guidelineLeft"
      app:layout_constraintEnd_toEndOf="@id/guidelineRight"
      app:layout_constraintTop_toBottomOf="@id/passwordEditText"
      android:layout_marginTop="16dp" />

    <Button
      android:id="@+id/enterViaSmsButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/button_enter_via_sms"
      android:textColor="@color/white"
      android:background="@color/colorPrimary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/enterButton"
      android:layout_marginTop="16dp"
      android:enabled="false" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guidelineLeft"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guidelineRight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.8" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
